<resources>
    <string name="app_name">SubMenu App</string>
    <string name="title_home">Transactions</string>
    <string name="title_dashboard">Transfers</string>
    <string name="title_notifications">Notifications</string>
    <string name="transactions">Transactions</string>
    <string name="transfers">Transfers</string>
    <string name="bank_name">Bank Name</string>
    <string name="date">11–11–11</string>
    <string name="approved">APPROVED</string>
    <string name="amount">100.00</string>
    <string name="reprocess">Reprocess</string>
    <string name="refund">Refund</string>
    <string name="delete_transaction">Delete Transaction</string>
</resources>
