<?xml version="1.0" encoding="utf-8"?>

<com.example.SubMenu.swipe.SwipeLayout android:id="@+id/swipeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
        android:id="@+id/leftMenu"
        android:layout_width="70dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/delete"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/delete_transaction" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightMenu"
        android:layout_width="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/refund"
            android:textColor="#fff"
            android:text="@string/refund"
            android:background="@color/refund"
            android:layout_weight="0.5"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:focusable="true" />

        <TextView
            android:id="@+id/reprocess"
            android:text="@string/reprocess"
            android:background="@color/reprocess"
            android:gravity="center"
            android:textColor="@color/white"
            android:clickable="true"
            android:layout_weight="0.5"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:focusable="true" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/transactionContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1">

         <TextView
            android:id="@+id/bank"
            android:layout_margin="10dp"
            android:text="@string/bank_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount"
            android:layout_margin="10dp"
            android:text="@string/amount"
            android:gravity="end"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

     </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/status"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/status"
            android:text="@string/approved"
            android:padding="3dp"
            android:layout_weight="0.1"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginTop="10dp"
            android:background="@color/divider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
</com.example.SubMenu.swipe.SwipeLayout>
